Ajuste SecurityConfig para Swagger y CORS en Cloud Run